# gms-target-coach

./: .dockerignore  .env  .env.development  .env.example  .env.test  .eslintrc.cjs  .flake8  .gitignore  .npmrc  .speckit.analyze.md  0.19.0  DEPENDABOT_CONFIGURATION.md  DOCKER_DEVELOPMENT.md  Dockerfile  Dockerfile.cypress  Dockerfile.test  GMShoot_v2_Comprehensive_Production_Readiness_Report.md  GMShoot_v2_Microservices_Readiness_Checklist.md  GMShoot_v2_Production_Readiness_Assessment.md  GMShoot_v2_Production_Readiness_Checklist.md  GMShoot_v2_Production_Ready_MVP_Implementation_Plan.md  GMShoot_v2_Production_Ready_MVP_Specification.md  GMShoot_v2_Relaunch_Implementation_Plan.md  GMShoot_v2_System_Architecture.md  GMShoot_v2_Technical_Analysis_Report.md  GMShoot_v2_UI_UX_Fix_Plan.md  IMPLEMENTATION_PLAN.md  IMPORT_FIX_SOLUTION.md  Makefile  PHASE_1_IMPLEMENTATION_PLAN.md  PRODUCTION_MONITORING_PLAN.md  PRODUCTION_READINESS_AUDIT.md  PRODUCTION_READINESS_PLAN.md  PROJECT_ANALYSIS.md  PROJECT_STRUCTURE_ANALYSIS.md  README.md  README_MIGRATION.md  SECURITY_MITIGATION_PLAN.md  SOTA_DEMO_MVP_COMPLETION_REPORT.md  UI_ASSESSMENT_REPORT.md  (+47 more)
.firebase/: hosting.YnVpbGQ.cache
.github/: dependabot.yml
.kilocode/: mcp.json
.speckit/: CRITICAL_ISSUES_RESOLUTION_REPORT.md  GMShoot_v2_Analysis_Feature_Implementation_Plan.md  GMShoot_v2_Mock_vs_Real_Implementation_Gaps.md  GMShoot_v2_Production_Implementation_Plan.md  GOOGLE_OAUTH_FIX_GUIDE.md  PRODUCTION_READINESS_AUDIT.md  SOTA_DEMO_MVP_COMPLETION_REPORT.md  TANSTACK_QUERY_MIGRATION.md  UI-UX.md  UI_Design.txt  constitution.md  (+7 more)
(+487 files in other folders)
